2011-12-07  Mary Wu  <mary.wu@torchmobile.com.cn>

        Change function name InitializeLoggingChannelsIfNecessary to follow coding style guideline
        https://bugs.webkit.org/show_bug.cgi?id=73986

        Reviewed by Kenneth Rohde Christiansen.

        * WebView/WebView.mm:
        (-[WebView _commonInitializationWithFrameName:groupName:]):

2011-12-06  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION (WebKit2): Kill ring is not cleared when selection changes
        https://bugs.webkit.org/show_bug.cgi?id=73888
        <rdar://problem/10532310>

        Reviewed by Mark Rowe.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView becomeFirstResponder]): Added a FIXME comment.
        (-[WebHTMLView _selectionChanged]): Moved the code to clear kill ring to WebCore. The rest
        of kill ring implementation is there, so it makes no sense to have this call in WebKits.

2011-12-05  Anders Carlsson  <andersca@apple.com>

        Make LayerFlushSchedulerClient::flushLayers indicate whether the flush was successful or not
        https://bugs.webkit.org/show_bug.cgi?id=73862

        Reviewed by Andy Estes.

        Remove the call to LayerFlushScheduler::invalidate and return true instead. Return false for the cases
        where we don't want the layer flush scheduler to be invalidated.

        * WebView/WebView.mm:
        (LayerFlushController::flushLayers):
        * WebView/WebViewData.h:

2011-12-05  Eric Carlson  <eric.carlson@apple.com>

        Add WebKit preferences for text track settings
        https://bugs.webkit.org/show_bug.cgi?id=73721

        Reviewed by John Sullivan.

        * WebView/WebPreferenceKeysPrivate.h: Added #define for shouldDisplaySubtitles, shouldDisplayCaptions, 
        and shouldDisplayTextDescriptions properties.

        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]): Initialize new preferences to NO.
        (-[WebPreferences setShouldDisplaySubtitles:]): Added.