@@ -1,3 +1,11 @@
+2011-12-07  Mark Rowe  <mrowe@apple.com>
+
+        Fix the 32-bit build.
+
+        Ignore some warnings that only occur in 32-bit.
+
+        * Plugins/WebNetscapePluginPackage.mm:
+
 2011-12-07  Mary Wu  <mary.wu@torchmobile.com.cn>
 
         Change function name InitializeLoggingChannelsIfNecessary to follow coding style guideline
